Name:           language-promela
Version:        0.1
Author:         Henning Günther
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE

Library
  Build-Depends:        base,array,pretty,mtl,containers,bytestring
  Exposed-Modules:
    Language.Promela.Tokens
    Language.Promela.Lexer
    Language.Promela.Syntax
    Language.Promela.Parser
    Language.Promela.Pretty